# job-notifier

./: README.md
client/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/.github/workflows/: deploy-pr.yml  deploy.yml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: types.ts
client/src/components/auth/: Signin.tsx  Signup.tsx  constants.ts
client/src/components/dashboardContainer/: AlertRow.tsx  DashboardContainer.tsx  constants.ts  types.ts
client/src/components/dashboardContainer/components/: filterBadge.tsx
client/src/components/dashboardContainer/components/forms/: AddAlertForm.tsx  AlertForm.tsx  EditAlertForm.tsx  constants.ts
client/src/components/ui/: button.tsx  filterBadge.tsx  search.tsx  table.tsx
client/src/contexts/: UserContext.tsx
client/src/contexts/AuthContext/: AuthContext.tsx  AuthProvider.tsx  types.ts
client/src/contexts/alerts/: AlertsContext.tsx  AlertsProvider.tsx  types.ts
client/src/contexts/auth/: AuthProvider.tsx  types.ts
client/src/hooks/: useAlerts.ts  useAuth.ts  useToast.ts
client/src/lib/: supabaseClient.ts
client/src/pages/: Dashboard.tsx  PageNotFound.tsx
client/src/pages/auth/: AddPhone.tsx  ConfirmEmail.tsx  Signin.tsx  Signup.tsx  constants.ts
client/src/routes/: constants.ts  index.tsx
client/src/routes/components/: PrivateRoutes.tsx
client/src/types/: alert.ts  supabase.types.ts
server/: .gitignore  pyproject.toml
server/app/: main.py
